--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,7 +1,6 @@
 {
-  "username": "postgres",
-  "password": "docker",
-
+  "username": "root",
+  "password": "1234",
   "name": "default",
   "type": "postgres",
   "host": "localhost",
